# medical_chatbot

./: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml
app/: main.py
app/database/: database.py  schemas.py
app/routers/: chat.py  documents.py  smart.py  users.py
app/services/: ai_service.py  rag_service.py
app/utils/: security.py
