[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb>=1.5.0",
    "fastapi[standard]>=0.137.1",
    "langchain>=1.3.9",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=5.4.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "rank-bm25",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "bcrypt==4.0.1",
    "langchain-groq>=1.1.3",
]
